# zeebroo-portal

./: .env.example  .gitmodules  .gitmodules.example  README.md  composer.json  modules_statuses.json  package-lock.json
Modules/AIBot/: composer.json  module.json  vite.config.js
Modules/AIBot/config/: config.php
Modules/AIBot/routes/: api.php  web.php
Modules/Account/routes/: web.php
Modules/AppConnection/: composer.json  module.json
Modules/AppConnection/routes/: api.php  web.php
Modules/Auth/routes/: web.php
Modules/Business/routes/: web.php
Modules/FileManager/: module.json
Modules/FileManager/routes/: api.php  web.php
Modules/HRManagement/: composer.json  module.json  vite.config.js
Modules/HRManagement/config/: config.php
Modules/HRManagement/routes/: api.php  web.php
Modules/Pos/: module.json
Modules/Pos/docs/: API.md  openapi.json  openapi.yaml
Modules/Pos/routes/: api.php  web.php
Modules/Product/: module.json
Modules/Product/config/: config.php
Modules/Purchase/: module.json
Modules/Settings/: composer.json  helpers.php  module.json
app/Models/: User.php
database/seeders/: AuthLoginSeeder.php  DatabaseSeeder.php
desktop/: CMakeLists.txt
desktop/src/: MainWindow.cpp  main.cpp
docs/: MODULE_SUBMODULES.md
pos_desktop/: CMakeLists.txt  README.md
pos_desktop/src/: main.cpp
resources/views/: admin.blade.php  dashboard.blade.php
routes/: web.php
scripts/git-submodules/: create-github-repos.sh  install-module-submodule.sh  module-repos.json  publish-module.sh  setup-all-submodules.sh
(+373 files in other folders)
